# Arch-Pattern-Book

./: .env  Cargo.toml  docker-compose.yml  log  readme.org
.github/workflows/: check.yml
migrations/: 20260227220617_CreateProductTable.sql  20260227220826_CreateOrderLineTable.sql  20260227221118_CreateBatchTable.sql  20260227221447_CreateAllocationsTable.sql  20260227221726_CreateAllocationsViewTable.sql
src/: bootstrap.rs  main.rs
src/allocation/: mod.rs
src/allocation/adapters/: mod.rs  redis_eventpublisher.rs  repository.rs
src/allocation/domain/: commands.rs  events.rs  mod.rs  model.rs  orm.rs
src/allocation/service_layer/: handlers.rs  message_bus.rs  mod.rs
