[package]
name = "arch-python-book-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["json"] }
futures = "0.3.32"
futures-util = "0.3.32"
itertools = "0.14.0"
redis = { version = "1.0.4", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "time"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
